# vbuild

./: .gitignore  LICENSE  README.md  changelog.md  pyproject.toml  setup.py  test_py_comp.html  test_py_comp.py  testc.py  tests.py  tox.ini  vbuild.html  vbuild.py
.github/workflows/: on_commit_do_all_unittests.yml  on_tag_do_release_and_deploy_pypi.yml  test.yml  test_platforms.yml  update_version.py
doc/: CssPreProcess.md  PostProcess.md  PyComponent.md  ex.md  generate.md  minimize.md  vs.md
tests/: test_PyComponent.py  test_PyStdLibIncludeOrNot.py  test_jsmin.py  test_jsminOnline.py  test_mkPrefixCss.py  test_py2js.py  test_renderFiles.py  test_trans.py  test_vbuild _encoding.py  test_vbuild.py  test_vbuild_encoding.py  test_vbuild_less.py  test_vbuild_sass.py  test_vueparser.py
vbuild/: __init__.py
