[tool.poetry]
name = "vbuild"
version = "0.0.0" # auto-updated
description = "A simple module to extract html/script/style from a vuejs '.vue' file (can minimize/es2015 compliant js) ... just py2 or py3, NO nodejs !"
authors = ["manatlan <manatlan@gmail.com>"]
#include = ["LICENSE"]
readme = 'README.md'
keywords=['vuejs', 'vue', 'html', 'javascript', 'style', 'minimize', 'es2015']
homepage = "https://github.com/manatlan/vbuild"
repository = "https://github.com/manatlan/vbuild"
documentation = "https://github.com/manatlan/vbuild"
license="MIT"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^2.7 || ^3.6"
pscript = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = ">=3.7,<4.0"
pytest-cov = "^2.6"
closure = "^20180204.0"
pyscss = "^1.3"
lesscpy = "^0.13.0"
pathlib = { version = "^1.0", python = "~2.7" }         # for py27/pyscss
enum-compat = { version = "^0.0.2", python = "~2.7" }   # for py27/pyscss


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
